objects/tdc_cti__Caller_List__c/tdc_cti__Caller_List__c.object-meta.xml
<CustomObject>
    <label>Caller List</label>
    <nameField>
        <label>Caller List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Caller Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>