objects/tdc_cti__Caller_List__c/fields/tdc_cti__Active__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether the Caller List is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>