objects/tdc_cti__Caller_List__c/fields/tdc_cti__Call_Highlighter__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Highlighter__c</fullName>
    <description>This field is used to store the record Id where the CTI Dialer was paused.</description>
    <label>Call Highlighter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>