objects/tdc_cti__Caller_List__c/fields/tdc_cti__Dialer_entries__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Dialer_entries__c</fullName>
    <description>This field is used to store the CTI Dialer table column details.</description>
    <label>Dialer Entries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>