objects/tdc_cti__Caller_List__c/fields/tdc_cti__Phone__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Phone__c</fullName>
    <description>This field is used to store the default calling phone field for a CTI Dialer.</description>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>