objects/tdc_cti__Caller_List__c/fields/tdc_cti__Serial_No__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Serial_No__c</fullName>
    <description>This field is used to store the serial number of the record where the CTI Dialer was paused.</description>
    <label>Serial No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>