objects/tdc_cti__Caller_List__c/fields/tdc_cti__Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Type__c</fullName>
    <description>This field is used to store the related object name.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>