objects/tdc_cti__Caller_List__c/listViews/CTI_Incoming_Call_Queue_Caller_List.listView-meta.xml
<ListView>
    <fullName>CTI_Incoming_Call_Queue_Caller_List</fullName>
    <filterScope>Queue</filterScope>
    <label>CTI Incoming Call Queue</label>
    <queue>CTI_Incoming_Call_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>